--- a/index.html
+++ b/index.html
@@ -27,21 +27,28 @@
       </div>
     </div>
     <div id="usage">
-      <div class="container container-small">
-        <div class="col col-sm-6">
+      <div class="container container-large">
+        <div class="col col-12">
           <div class="panel">
             <div class="panel-head"><h2 class="panel-title">Usage</h2></div>
             <div class="panel-body">
               <h4>Initialize a feed:</h4>
-              <pre><code class="language-javascript">var mediumFeed = new MediumFeed(); //Setup without username
-var mediumFeed = new MediumFeed("caden"); //Include username for default feed</code></pre>
+              <pre><code class="language-javascript">var mediumFeed = new MediumFeed();
+var mediumFeed = new MediumFeed({development: true}); //Enables a CORS proxy for localhost development
+</code></pre>
               <br/>
               <h4>Get articles:</h4>
-              <pre><code class="language-javascript">mediumFeed.getFeed("caden"); //Pass username of the feed you want
-mediumFeed.getFeed(); //Use username passed to MediumFeed constructor</code></pre>
+              <pre><code class="language-javascript">mediumFeed.getUserFeed("caden"); //Pass username of the feed you want
+mediumFeed.getTopicFeed("technology"); //Pass topic (see: https://medium.com/topics)
+mediumFeed.getTagFeed("reactjs"); //Pass tag to get feed for</code></pre>
             </div>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="col col-sm-12">
+        <a href="https://www.buymeacoffee.com/caden" target="_blank"><img src="https://i.imgur.com/I80eQwg.png"/></a>
       </div>
     </div>
   </body>
