--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
   </head>
   <body>
     <div id="information">
-      <div class="container container-small">
+      <div class="container container-large">
         <div class="col col-sm-6">
           <div class="panel">
             <div class="panel-head"><h2 class="panel-title">Medium-Feed</h2></div>
             <div class="panel-body">
-              A simple utility to get article objects for any Medium user.
+              <p>
+              A simple utility to get a list of articles for any Medium feed, including the ability to get user feeds, topic feeds, and tag feeds.
+              <br/>
+              Additionally allows for both synchronous & asynchronous usage, and a CORS proxy for local development.
+              </p>
             </div>
           </div>
         </div>
