--- a/index.html
+++ b/index.html
@@ -2,14 +2,23 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Medium-Feed</title>
-    <meta name="author" content="Caden Sumner"/>
-    <meta name="description" content="A simple utility to get article objects for any Medium user."/>
-    <meta name="keywords" content="medium-feed,demo-site"/>
-    <link rel="stylesheet" href="https://unpkg.com/mustard-ui@latest/dist/css/mustard-ui.min.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/themes/prism-twilight.min.css"/>
+    <meta name="author" content="Caden Sumner" />
+    <meta
+      name="description"
+      content="A simple utility to get article objects for any Medium user."
+    />
+    <meta name="keywords" content="medium-feed,demo-site" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/mustard-ui@latest/dist/css/mustard-ui.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/themes/prism-twilight.min.css"
+    />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/prism.min.js"></script>
     <script src="lib/medium-feed.js" type="text/javascript"></script>
   </head>
@@ -18,12 +27,16 @@
       <div class="container container-large">
         <div class="col col-sm-6">
           <div class="panel">
-            <div class="panel-head"><h2 class="panel-title">Medium-Feed</h2></div>
+            <div class="panel-head">
+              <h2 class="panel-title">Medium-Feed</h2>
+            </div>
             <div class="panel-body">
               <p>
-              A simple utility to get a list of articles for any Medium feed, including the ability to get user feeds, topic feeds, and tag feeds.
-              <br/>
-              Additionally allows for both synchronous & asynchronous usage, and a CORS proxy for local development.
+                A simple utility to get a list of articles for any Medium feed,
+                including the ability to get user feeds, topic feeds, and tag
+                feeds. <br />
+                Additionally allows for both synchronous & asynchronous usage,
+                and a CORS proxy for local development.
               </p>
             </div>
           </div>
@@ -40,7 +53,7 @@
               <pre><code class="language-javascript">var mediumFeed = new MediumFeed();
 var mediumFeed = new MediumFeed({development: true}); //Enables a CORS proxy for localhost development
 </code></pre>
-              <br/>
+              <br />
               <h4>Get articles:</h4>
               <pre><code class="language-javascript">mediumFeed.getUserFeed("caden"); //Pass username of the feed you want
 mediumFeed.getTopicFeed("technology"); //Pass topic (see: https://medium.com/topics)
@@ -52,7 +65,9 @@ mediumFeed.getTagFeed("reactjs"); //Pass tag to get feed for</code></pre>
     </div>
     <div class="container">
       <div class="col col-sm-12">
-        <a href="https://www.buymeacoffee.com/caden" target="_blank"><img src="https://i.imgur.com/I80eQwg.png"/></a>
+        <a href="https://www.buymeacoffee.com/caden" target="_blank"
+          ><img src="https://i.imgur.com/I80eQwg.png"
+        /></a>
       </div>
     </div>
   </body>
