Update wording across sections

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Caden Sumner" />
     <meta
       name="description"
-      content="A simple utility to get article objects for any Medium user."
+      content="A simple & small utility to get article objects for any Medium user."
     />
     <meta name="keywords" content="medium-feed,demo-site" />
     <link
@@ -32,7 +32,7 @@
             </div>
             <div class="panel-body">
               <p>
-                A simple utility to get a list of articles for any Medium feed,
+                A simple & small utility to get article objects for any Medium user,
                 including the ability to get user feeds, topic feeds, and tag
                 feeds. <br />
                 Additionally allows for both synchronous & asynchronous usage,
