Update description across the board

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Caden Sumner" />
     <meta
       name="description"
-      content="A simple & small utility to get article objects for any Medium user."
+      content="A simple & small medium-utility to get article objects for any Medium user, topic, or tag."
     />
     <meta name="keywords" content="medium-feed,demo-site" />
     <link
@@ -32,11 +32,10 @@
             </div>
             <div class="panel-body">
               <p>
-                A simple & small utility to get article objects for any Medium user,
-                including the ability to get user feeds, topic feeds, and tag
-                feeds. <br />
-                Additionally allows for both synchronous & asynchronous usage,
-                and a CORS proxy for local development.
+                A simple & small medium-utility to get article objects for any Medium user, topic, or tag.
+                <br />
+                Additionally, medium-feed allows for both synchronous & asynchronous usage,
+                as well as a CORS proxy for local development.
                 </p>
                 <p>
                 Minified size: <b>2KB</b>
