Update demo/doc site

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                 Dependencies: <b>0</b>
                 </p>
                 <p>
+                  <b>CDN (latest):</b> <pre><code>https://unpkg.com/medium-feed@latest/dist/medium-feed.min.js</code></pre>
+                </p>
+                <p>
                 <em>(Still not in 1.0 release - 🐞 reports & 💬 feedback appreciated!)</em>
                 <br/>
                 <a href="#demo-articles">Jump straight to the demo ➡</a>
