--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ mediumFeed.getUserFeed("caden", alertCount); //Pass a callback as second param</
                   <p>Some final notes: getUserFeed() returns more 'content' (potentially the full article) 
                   than topics/tags, and returns HTML without the Medium css mentioned above.
                   <br/> 
-                  I recommend truncating the retunred content if you just want a 'snippet', and applying your own HTML-element based css as needed.</p>
+                  I recommend truncating the returned content if you just want a 'snippet', and applying your own HTML-element based css as needed.</p>
                 <br/>
                   <p>Below is the <b>topic</b> feed for 'technology' rendered with simple styling.</p>
                 </div>
