--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/themes/prism.min.css"
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/prism.min.js"></script>
-    <script src="lib/medium-feed.js" type="text/javascript"></script>
+    <script type="module" src="lib/medium-feed.js" type="text/javascript"></script>
   </head>
   <body>
     <div id="information">
@@ -44,6 +44,7 @@
                 </p>
                 <p>
                   <b>CDN (latest):</b> <pre><code>https://unpkg.com/medium-feed@latest/dist/medium-feed.min.js</code></pre>
+                  <b>Usage:</b> <pre><code><script type="module" src="https://unpkg.com/medium-feed@latest/dist/medium-feed.min.js"></script></code></pre>
                 </p>
                 <p>
                 <em>(Still not in 1.0 release - 🐞 reports & 💬 feedback appreciated!)</em>
