--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/themes/prism.min.css"
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/prism.min.js"></script>
-    <script type="module" src="lib/medium-feed.js" type="text/javascript"></script>
   </head>
   <body>
     <div id="information">
@@ -44,7 +43,6 @@
                 </p>
                 <p>
                   <b>CDN (latest):</b> <pre><code>https://unpkg.com/medium-feed@latest/dist/medium-feed.min.js</code></pre>
-                  <b>Usage:</b> <pre><code>&lt;script type="module" src="https://unpkg.com/medium-feed@latest/dist/medium-feed.min.js">&lt;/script></code></pre>
                 </p>
                 <p>
                 <em>(Still not in 1.0 release - 🐞 reports & 💬 feedback appreciated!)</em>
@@ -143,8 +141,8 @@ mediumFeed.getUserFeed("caden", alertCount); //Pass a callback as second param</
       </div>
     </div>
   </body>
-  <script>
-    import MediumFeed from 'lib/medium-feed.js';
+  <script type="module">
+    import MediumFeed from 'https://unpkg.com/medium-feed@latest/dist/medium-feed.min.js';
     let _mediumFeed = new MediumFeed({ useProxy: true });
     function refreshArticles() {
       document.getElementById('demo-articles').innerHTML = '';
