--- a/index.html
+++ b/index.html
@@ -143,6 +143,8 @@ mediumFeed.getUserFeed("caden", alertCount); //Pass a callback as second param</
   </body>
   <script type="module">
     import MediumFeed from 'https://unpkg.com/medium-feed@latest/dist/medium-feed.min.js';
+  </script>
+  <script>
     let _mediumFeed = new MediumFeed({ useProxy: true });
     function refreshArticles() {
       document.getElementById('demo-articles').innerHTML = '';
