--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ mediumFeed.getUserFeed("caden", alertCount); //Pass a callback as second param</
     window.MediumFeed = MediumFeed;
   </script>
   <script>
-    let _mediumFeed = new MediumFeed({ useProxy: true });
+    let _mediumFeed = new window.MediumFeed({ useProxy: true });
     function refreshArticles() {
       document.getElementById('demo-articles').innerHTML = '';
       let tag = document.getElementById('tag-input').value;
