Update docs for img

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@ mediumFeed.getUserFeed("caden", alertCount); //Pass a callback as second param</
   pubDate //Date
   content //String
   categories //Array of Strings
+  img // Article image
 }</code></pre>
             </div>
           </div>
